add ids to input forms

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
      <h1>Get to know your Ghanian name based on your day of Birth</h1>
       <div class="form">
         <label for="Birthday">Birthday:</label>
-        <input type="date" id="birthdY" name="birthday">
+        <input type="date" id="birthday" name="birthday">
         <h4>select gender</h4>
         <input type="radio" id="gender" name="gender">
         <label for="male">Male</label><br>
         <input type="radio" id="gender" name="gender">
         <label for="female">Female</label><br>
-        <button type="button">Submit</button>
+        <button type="button" onclick="myFunction()">Submit</button>
+        <p id="demo"></p>
     </div>
   
  </div>
